syntax = "proto3";

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative  internal/user/delivery/grpc/user.proto

package protobuf_session;

import "google/protobuf/empty.proto";

option go_package = "/grpc";

message User {
  uint64 Id = 1;
  string Email = 2;
  string Password = 3;
  string Role = 4;
}

message UserIdValue {
  uint64 Value = 1;
}

message EmailValue {
  string Value = 1;
}

service UserService {
  rpc GetById(UserIdValue) returns (User) {}
  rpc Create(User) returns (UserIdValue) {}
  rpc GetByEmail(EmailValue) returns (User) {}
  rpc UpdateUserPassword(User) returns (google.protobuf.Empty) {}
  rpc DeleteUserById(UserIdValue) returns (google.protobuf.Empty) {}
}


